--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -328,6 +328,7 @@ section {
 .hobbies {
   display: flex;
   justify-content: space-evenly;
+  margin-top: 20px;
 }
 
 .hobbie {
@@ -677,8 +678,7 @@ section {
   min-height: 320px;
 }
 .testimonials .testimonial-item .testimonial-img {
-  width: 90px;
-  border-radius: 50%;
+  width: 100%;
   margin: 0 auto;
 }
 .testimonials .testimonial-item h3 {
@@ -692,7 +692,7 @@ section {
   color: #999;
   margin: 0;
 }
-.testimonials .testimonial-item .quote-icon-left, .testimonials .testimonial-item .quote-icon-right {
+/* .testimonials .testimonial-item .quote-icon-left, .testimonials .testimonial-item .quote-icon-right {
   color: #c3e8fa;
   font-size: 26px;
 }
@@ -706,7 +706,7 @@ section {
   right: -5px;
   position: relative;
   top: 10px;
-}
+} */
 .testimonials .testimonial-item p {
   font-style: italic;
   margin: 0 15px 15px 15px;
@@ -741,6 +741,10 @@ section {
 }
 .testimonials .swiper-pagination .swiper-pagination-bullet-active {
   background-color: #149ddd;
+}
+.testimonials .testimonials-slider .testimonial-item h4 i {
+  font-size: 2rem;
+  margin-top: 5px;
 }
 
 /*--------------------------------------------------------------
