--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -398,30 +398,31 @@ section {
   display: block;
   background: none;
   border-radius: 0;
+  display: flex;
+  align-items: center;
+  
+}
+.progress i {
+  font-size: 2.8rem;
+  /* color: #112C53; */
+  margin-right: .5rem;
+}
+.progress span {
+  font-size: 1.4rem;
+}
+.progress img {
+  width: 2.8rem;
+  margin-right: .5rem;
 }
 .skills .progress .skill {
   padding: 0;
-  margin: 0 0 6px 0;
   text-transform: uppercase;
   display: block;
   font-weight: 600;
   font-family: "Poppins", sans-serif;
   color: #050d18;
 }
-.skills .progress .skill .val {
-  float: right;
-  font-style: normal;
-}
-.skills .progress-bar-wrap {
-  background: #dce8f8;
-  height: 10px;
-}
-.skills .progress-bar {
-  width: 1px;
-  height: 10px;
-  transition: 0.9s;
-  background-color: #149ddd;
-}
+
 
 /*--------------------------------------------------------------
 # Resume
